--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 aiofiles
 aiohttp
 asyncio
+beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
-httpx
-lyricsgenius
 motor
-pillow==9.5.0
+pillow
 psutil
-py-tgcalls==1.0.8
+py-tgcalls==0.9.2
 pykeyboard
 pyrogram==2.0.106
 python-dotenv
-pyyaml==5.3.1
+pyyaml
 requests
 speedtest-cli
 spotipy
 tgcrypto
+unidecode
+yt-dlp
 youtube-search
 youtube-search-python
-git+https://github.com/yt-dlp/yt-dlp.git
