--- a/app.json
+++ b/app.json
@@ -79,7 +79,7 @@
         "required": true
       }
     },
-    "buildpacks": [
+"buildpacks": [
           {
               "url": "heroku/python"
           },
@@ -90,10 +90,5 @@
               "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
           }
       ],
-      "formation": {
-          "worker": {
-              "quantity": 1,
-              "size": "free"
-          }
-      }
-  }
+      "stack": "container"
+}
