--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Yukki Music Bot",
-    "description": "Telegram Group Calls streaming bot with some useful features, written in Python with Pyrogram and Py-Tgcalls. Supporting platforms like Youtube, Spotify, Resso, AppleMusic, Soundcloud and M3u8 Links.",
-    "logo": "https://telegra.ph/file/c0e014ff34f34d1056627.png",
+    "name": "تشغيل الملفات الصوتية اخر تحديث ",
+    "description": "!!هذا الأصدار محدث",
+    "logo": "https://graph.org/file/8041894fa11e8100a9d19.jpg",
     "keywords": [
     "python3",
     "telegram",
@@ -14,67 +14,58 @@
     "stack": "container",
     "env": {
       "API_ID": {
-        "description": "Get this value from https://my.telegram.org",
-        "value": "",
+        "description": "- اتركها كما هي .",
+        "value": "8934899",
         "required": true
       },
       "API_HASH": {
-        "description": "Get this value from https://my.telegram.org",
-        "value": "",
+        "description": "- اتركها كما هي .",
+        "value": "bf3e98d2c351e4ad06946b4897374a1e",
         "required": true
       },
       "AUTO_LEAVING_ASSISTANT": {
-        "description": "If you want your assistant to leave all chats automatically after some time.",
+        "description": "- اتركها كما هي .",
         "value": "True",
         "required": false
       },
       "BOT_TOKEN": {
-        "description": "A Bot's token from Botfather",
+        "description": "- اكتب توكن البوت .",
         "value": "",
         "required": true
       },
       "MONGO_DB_URI": {
-        "description": "Get a mongodb url from https://cloud.mongodb.com . You can leave it blank if you want , bot will use Yukki's database for you.",
-        "value": "",
+        "description": "- اتركها كما هي .",
+        "value": "mongodb+srv://Bikash:Bikash@bikash.yl2nhcy.mongodb.net/?retryWrites=true&w=majority",
         "required": true
       },
       "MUSIC_BOT_NAME": {
-        "description": "A name for your Music Bot. Please don't use ascii characters",
-        "value": "",
+        "description": "- اتركها كما هي .",
+        "value": "BoT",
         "required": true
       },
       "OWNER_ID": {
-        "description": "The user id(s) of user(s) whom you would like to add as a OWNER. Multiple values shall be seperated with a space.",
-        "value": "",
+        "description": "- اكتب ايدي المنشئ ، او اتركها كما هي .",
+        "value": "1854384004",
         "required": true
       },
       "STRING_SESSION": {
-        "description": "A Pyrogram String Session. One Assistant is Compulsory.",
+        "description": "- @FreedomLoBoT كود بايروجرام يعمل على هذا السورس فقط من هذا البوت .",
         "value": "",
         "required": true
       },
-      "HEROKU_API_KEY": {
-        "description": "Your Heroku account's API key",
-        "value": "",
-        "required": false
-      },
-      "HEROKU_APP_NAME": {
-        "description": "Your heroku app/bot's name",
-        "value": "",
-        "required": false
-      },
+      
       "LOG_GROUP_ID": {
-        "description": "Your Log Group ID, add your bot and promote as an admin with full rights!. Use only Group. Please don't use Channel ID.",
+        "description": "- اكتب ايدي المجموعة يجب ان يبدء ب -100 .",
         "value": "",
         "required": true
       },
       "UPSTREAM_REPO": {
-        "description": "If you dont know this, Leave as it is",
-        "value": "https://github.com/TeamYukki/YukkiMusicBot",
+        "description": "- لاتغيرها ابدا .",
+        "value": "https://github.com/STKR2/Owner",
         "required": true
       },
       "UPSTREAM_BRANCH": {
-        "description": "Upstream Repo's Branch Name",
+        "description": "- لاتغيرها ابدا",
         "value": "master",
         "required": true
       }
