--- a/strings/command.yml
+++ b/strings/command.yml
@@ -49,8 +49,8 @@ UNMUTE_COMMAND : ["رفع", "cunmute"]
 STOP_COMMAND : ["كافي", "ايقاف", "cstop", "cend"]
 SKIP_COMMAND : ["سكب", "cskip"]
 SHUFFLE_COMMAND : ["shuffle", "cshuffle"]
-LOOP_COMMAND : ["loop", "cloop"]
-SEEK_COMMAND : ["seek", "cseek", "seekback", "cseekback"]
+LOOP_COMMAND : ["تكرار", "cloop"]
+SEEK_COMMAND : ["تقديم", "cseek", "seekback", "cseekback"]
 RESTART_COMMAND : ["ريستارت"]
 
 # Sudo Users Commaands
