--- a/strings/command.yml
+++ b/strings/command.yml
@@ -48,7 +48,7 @@ MUTE_COMMAND : ["كتم", "cmute"]
 UNMUTE_COMMAND : ["رفع", "cunmute"]
 STOP_COMMAND : ["كافي", "ايقاف", "cstop", "cend"]
 SKIP_COMMAND : ["سكب", "cskip"]
-SHUFFLE_COMMAND : ["shuffle", "cshuffle"]
+SHUFFLE_COMMAND : ["تلقائي", "cshuffle"]
 LOOP_COMMAND : ["تكرار", "cloop"]
 SEEK_COMMAND : ["تقديم", "cseek", "seekback", "cseekback"]
 RESTART_COMMAND : ["ريستارت"]
