--- a/strings/command.yml
+++ b/strings/command.yml
@@ -22,7 +22,7 @@ STATS_COMMAND : ["stats"]
 LANGUAGE_COMMAND : ["lang", "language", "langs"]
 
 # Play Commands
-PLAY_COMMAND : ["شغل", "فيد", "تشغيل", "فيديو", "playforce", "vplayforce", "cplayforce", "cvplayforce"]
+PLAY_COMMAND : ["شغل", "فيديو", "cplay", "cvplay", "playforce", "vplayforce", "cplayforce", "cvplayforce"]
 PLAYMODE_COMMAND : ["playmode"]
 CHANNELPLAY_COMMAND : ["ربط"]
 STREAM_COMMAND : ["مباشر", "cstream", "streamforce"]
