--- a/strings/command.yml
+++ b/strings/command.yml
@@ -42,15 +42,15 @@ LYRICS_COMMAND : ["lyrics"]
 AUTH_COMMAND : ["auth"]
 UNAUTH_COMMAND : ["unauth"]
 AUTHUSERS_COMMAND : ["authusers"]
-PAUSE_COMMAND : ["اوكف", "cpause"]
-RESUME_COMMAND : ["استمر", "cresume"]
-MUTE_COMMAND : ["كتم", "cmute"]
-UNMUTE_COMMAND : ["رفع", "cunmute"]
-STOP_COMMAND : ["كافي", "ايقاف", "cstop", "cend"]
-SKIP_COMMAND : ["سكب", "cskip"]
+PAUSE_COMMAND : ["اوكف", "و"]
+RESUME_COMMAND : ["استمر", "م"]
+MUTE_COMMAND : ["كتم", "ص"]
+UNMUTE_COMMAND : ["رفع", "ر"]
+STOP_COMMAND : ["كافي", "ايقاف", "ك", "cend"]
+SKIP_COMMAND : ["سكب", "س"]
 SHUFFLE_COMMAND : ["تلقائي", "cshuffle"]
-LOOP_COMMAND : ["تكرار", "cloop"]
-SEEK_COMMAND : ["تقديم", "cseek", "seekback", "cseekback"]
+LOOP_COMMAND : ["تكرار", "ت"]
+SEEK_COMMAND : ["تقديم", "د", "seekback", "cseekback"]
 RESTART_COMMAND : ["ريستارت"]
 
 # Sudo Users Commaands
