--- a/strings/command.yml
+++ b/strings/command.yml
@@ -22,7 +22,7 @@ STATS_COMMAND : ["stats"]
 LANGUAGE_COMMAND : ["lang", "language", "langs"]
 
 # Play Commands
-PLAY_COMMAND : ["play", "vplay", "cplay", "/cvplay", "playforce", "vplayforce", "cplayforce", "cvplayforce", "تشغيل" , "فيديو", "#تشغيل", "/play", "/vplay", "cplay", "cvplay", "/تشغيل", "/ق تشغيل", "/ق شغل", "/فيديو", "تشغيل/", "{NAME_BOT}", "فيديو", "#فديو", "فديو","سورة","سوره"]
+PLAY_COMMAND : ["شغل", "فيد", "ق", "/cvplay", "playforce", "vplayforce", "cplayforce", "cvplayforce", "تشغيل" , "فيديو", "#تشغيل", "/play", "/vplay", "cplay", "ف", "/تشغيل", "/ق تشغيل", "/ق شغل", "/فيديو", "تشغيل/", "{NAME_BOT}", "فيديو", "#فديو", "فديو","سورة","سوره"]
 PLAYMODE_COMMAND : ["playmode"]
 CHANNELPLAY_COMMAND : ["ربط"]
 STREAM_COMMAND : ["stream", "cstream", "streamforce", "لايف", "ق لايف"]
@@ -45,7 +45,7 @@ PAUSE_COMMAND : ["اوكف", "و"]
 RESUME_COMMAND : ["استمر", "م"]
 MUTE_COMMAND : ["كتم", "ص"]
 UNMUTE_COMMAND : ["رفع", "ر"]
-STOP_COMMAND : ["كافي", "ايقاف", "ك", "cend"]
+STOP_COMMAND : ["كافي", "ايقاف", "ك", "اوكف"]
 SKIP_COMMAND : ["سكب", "س"]
 SHUFFLE_COMMAND : ["تلقائي", "cshuffle"]
 LOOP_COMMAND : ["تكرار", "ت"]
