--- a/app.json
+++ b/app.json
@@ -69,14 +69,18 @@
         "description": "- لاتغيرها ابدا",
         "value": "master",
         "required": true
-      }
+       }
     },
-"buildpacks": [
-    {
-      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
-    },
-    {
-      "url": "heroku/python"
-    }
-  ]
-}
+    "buildpacks": [
+          {
+              "url": "heroku/python"
+          },
+          {
+              "url": "heroku/nodejs"
+          },
+          {
+              "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+          }
+      ],
+      "stack": "container"
+  }
