--- a/app.json
+++ b/app.json
@@ -1,16 +1,9 @@
 {
-    "name": "بوت تشغيل الملفات الصوتية في القنوات والمجموعات  ",
-    "description": "هذا السورس محدث احدث إصدار لسنة 2024",
-    "logo": "https://graph.org/file/8041894fa11e8100a9d19.jpg",
-    "keywords": [
-    "python3",
-    "telegram",
-    "bot",
-    "Yukki",
-    "YukkiMusicBot",
-    "telegram-bot",
-    "pyrogram"
-    ],
+    "name": "سورس ميوزك فريدوم",
+    "description": "سورس فريدوم لتشغيل الاغاني , رائع انت تستخدم احدث اصدار !",
+    "logo": "https://te.legra.ph/file/4807752a011965b771900.jpg",
+    "keywords": ["music", "voice chat", "telegram"],
+    "repository": "https://github.com/STKR2/LG",
     "stack": "container",
     "env": {
       "API_ID": {
@@ -62,7 +55,7 @@
       },
       "UPSTREAM_REPO": {
         "description": "- لاتغيرها ابدا .",
-        "value": "https://github.com/STKR2/Owner",
+        "value": "https://github.com/STKR2/How-",
         "required": true
       },
       "UPSTREAM_BRANCH": {
@@ -72,15 +65,11 @@
        }
     },
     "buildpacks": [
-          {
-              "url": "heroku/python"
-          },
-          {
-              "url": "heroku/nodejs"
-          },
-          {
-              "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
-          }
-      ],
-      "stack": "container"
-  }
+    {
+      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+    },
+    {
+      "url": "heroku/python"
+    }
+  ]
+}
